# ores-clone

./: CMakeLists.txt  Constants.h  Game.cpp  Game.h  Input.cpp  Input.h  main.cpp
Entities/: Entity.cpp  Entity.h  Resource.cpp  Resource.h  TileEntity.cpp  TileEntity.h
Graphics/: Font.cpp  Font.h  Graphics.cpp  Graphics.h  TextureRegion.h
Level/: Level.cpp  Level.h  LevelTileMethods.cpp  TileScore.cpp  TileScore.h  TileType.cpp  TileType.h
Util/: Coord.cpp  Coord.h  Util.h
submission/: OresClone  readme.txt
